--- a/Index.html
+++ b/Index.html
@@ -11,11 +11,17 @@
 </head>
 
 <body onload="actualizaReloj()" >
-    <div  class="reloj" >
-        <h1 class="alarma">Alarma</h1>
-        <h1 id>hh:mm:s </h1>
-        <h1 id="horaActual">hh:mm:ss</h1>
+    <div class="ruleta">
+
     </div>
-    <div> </div>
+    <div  class="reloj">
+        <h1 id="horaActual">hh:mm:ss</h1>
+        <div class="alarma">
+            <h1 class="alar">Alarma</h1>
+            <h1 id="hfin">hh:mm:ss </h1>
+            <h1 id="contador">hh:mm:ss</h1> 
+        </div>
+    </div>
+   
 </body>
 </html>
