--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,7 @@
     </div>
     <div  class="reloj">
         <h1 id="horaActual">hh:mm:ss</h1>
+        <boton>vsd</boton>
         <div class="alarma">
             <h1 class="alar">Alarma</h1>
             <h1 id="hfin">hh:mm:ss </h1>
