--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,16 @@
 </head>
 
 <body onload="actualizaReloj()" >
+    <button class="modo" id="modo">
+        <span></span>
+        <span></span>
+    </button>
+
     <div class="ruleta">
 
     </div>
     <div  class="reloj">
         <h1 id="horaActual">hh:mm:ss</h1>
-        <boton>vsd</boton>
         <div class="alarma">
             <h1 class="alar">Alarma</h1>
             <h1 id="hfin">hh:mm:ss </h1>
