--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
 
 <body onload="actualizaReloj()" >
     <button class="modo" id="modo">
-        <span></span>
-        <span></span>
+        <span> <img src="/icons/modo_claro.png"> </span>
+        <span><img src="/icons/modo_oscuro.png"></span>
     </button>
 
     <div class="ruleta">
