--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="reloj">
         <h1 id="horaActual">hh:mm:ss</h1>
         <input type="time" id="horaAlarma" >
-        <button id="habilitar" onclick="configurarAlarma()" >Habilitar alarma</button>
+        <button id="habilitar" onclick="alarmar()">Habilitar alarma</button>
             <div class="alarma">
             <h1 class="alar">Alarma</h1>
             <h1 id="hfin">hh:mm:ss </h1>
