--- a/index.html
+++ b/index.html
@@ -19,19 +19,15 @@
     <script src="https://kit.fontawesome.com/9e616cad9e.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="claro" onload="actualizaReloj()" >
+<body class="claro" onload="actualizaReloj(), dibujarRuleta()" >
     <button class="modo" onclick="toggleTheme()">
         <span id="claro" style="display: none;"> <i class="fa-solid fa-circle-half-stroke"></i> </span>
         <span id="oscuro"> <i class="fa-solid fa-circle-half-stroke fa-rotate-180"> </i></span>
     </button>
     <div class="contenedor">
-        <h1>Concursantes</h1>
-        <div class="concursantes">
-            <canvas id="idcanvas" width="600" height="600"></canvas>
-            <br>
-            <button onclick="sortear()"><span id="idestado">Sortear</span></button>
-            <div class="mark-winner"></div>
-        </div>
+        <canvas id="ruleta" width="400" height="400"></canvas>
+        <button onclick="girarRuleta()">Girar ruleta</button>
+        <audio id="sonido" src="https://www.soundjay.com/button/sounds/button-3.mp3"></audio>
     </div>
     <div class="reloj">
         <h1 id="horaActual">hh:mm:ss</h1>
