--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>EinesAula</title>
-    <meta name="author" content="">
+    <meta name="authors" content="Efrem, Luis Espinal, Josep">
     <meta name="description" content="M04 UF3 JavaScript">
     <meta name="dateCreated" content="05/05/2023">
     <!--CSS-->
@@ -26,7 +26,7 @@
     </button>
     <div class="contenedor">
         <canvas id="ruleta" width="400" height="400"></canvas>
-        <button onclick="girarRuleta()">Girar ruleta</button>
+        <button class="btn-girar" onclick="girarRuleta()">Girar ruleta</button>
         <audio id="sonido" src="https://www.soundjay.com/button/sounds/button-3.mp3"></audio>
     </div>
     <div class="reloj">
