--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
         <span id="claro" style="display: none;"> <i class="fa-solid fa-circle-half-stroke"></i> </span>
         <span id="oscuro"> <i class="fa-solid fa-circle-half-stroke fa-rotate-180"> </i></span>
     </button>
-    <div class="contenedor">
-        <canvas id="ruleta" width="400" height="400"></canvas>
-        <button class="btn-girar" onclick="girarRuleta()">Girar ruleta</button>
-        <audio id="sonido" src="https://www.soundjay.com/button/sounds/button-3.mp3"></audio>
-    </div>
+
+    <!--ruleta-->
+<div class="contenedor">
+    <canvas id="ruleta" width="400" height="400"></canvas>
+    <button class="btn-girar" onclick="girarRuleta()">Girar ruleta</button>
+    <audio id="sonido" src="./song/ruleta_juego.mp3"></audio>
+
+    <h1 id="ganador"></h1>
+</div>
+
+
+    <!--Reloj-->
     <div class="reloj">
         <h1 id="horaActual">hh:mm:ss</h1>
         <select id="selectSonido">
             <option value="./song/Weather_alarm_mi.mp3">Weather_alarm</option>
             <option value="./song/Morning_Flower.mp3">Morning_Flower</option>
-            <option value="sonido3.mp3">Sonido 3</option>
-            <!-- Agrega más opciones de sonido según tus necesidades -->
+            <option value="./song/iphone_alarm.mp3">Iphone alarm</option>
           </select>
-        
-        <p></p>
+          <p></p>
         <input type="time" id="horaAlarma" >
                 <p></p>
         <button id="habilitar" onclick="alarmar()">Habilitar alarma</button>
